--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ twitter_username: ErikEverardo1
 github_username:  erik-everardo
 
 # Build settings
-remote_theme: BDHU/minimalist
+remote_theme: minima
 plugins:
   - jekyll-feed
 
