--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ github_username:  erik-everardo
 remote_theme: oinam/oinam-jekyll
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default.
